# NanamiDownloader

./: .gitignore  CMakeLists.txt  NOTICE  NanamiDownloader.rc  README.md  resources.qrc
cmake/: copy_third_party.cmake
docs/: README_en.md
src/: main.cpp
src/Core/: Aria2Service.cpp  Aria2Service.h  AutoStartManager.cpp  AutoStartManager.h  ClipboardHelper.cpp  ClipboardHelper.h  DownloadManager.cpp  DownloadManager.h  LinkHelper.cpp  LinkHelper.h  M3u8Service.cpp  M3u8Service.h  SettingsManager.cpp  SettingsManager.h  TaskModel.cpp  TaskModel.h  TorrentService.cpp  TorrentService.h
src/Drivers/BaiduNetdisk/: BaiduFileModel.cpp  BaiduFileModel.h  BaiduService.cpp  BaiduService.h
src/Drivers/Thunder/: ThunderFileModel.cpp  ThunderFileModel.h  ThunderService.cpp  ThunderService.h
src/UI/: AboutDialog.qml  AddTorrentDialog.qml  AdvancedSettingsView.qml  BasicSettingsView.qml  CloseConfirmDialog.qml  CloudMountSettingsView.qml  DeleteConfirmDialog.qml  Main.qml  NewTaskDialog.qml  OverwriteConfirmDialog.qml  SettingsView.qml  Sidebar.qml  SpeedWidget.qml  TaskDetailView.qml  TaskListView.qml  ThemeController.cpp  ThemeController.h
src/UI/Drivers/: BaiduView.qml  ThunderVerificationDialog.qml  ThunderView.qml
src/Utils/: CursorPosProvider.h  Logger.cpp  Logger.h  SingleInstanceManager.cpp  SingleInstanceManager.h
translations/: en_US.ts  ja_JP.ts  ko_KR.ts  zh_CN.ts  zh_TW.ts
